[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://addons/vector_ai/scripts/main_dock.gd" id="1_main"]
[ext_resource type="Theme" path="res://addons/vector_ai/assets/vector_ai_theme.tres" id="3_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dark"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.12, 0.12, 0.12, 1.0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.2, 0.2, 1.0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_input"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.15, 0.15, 0.15, 1.0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25, 0.25, 0.25, 1.0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="VectorAI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_theme")
script = ExtResource("1_main")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dark")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "VECTOR AI"
vertical_alignment = 1

[node name="SettingsButton" type="Button" parent="PanelContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Settings"
flat = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
theme_override_styles/separator = SubResource("StyleBoxFlat_input")

[node name="InputLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Enter your request:"

[node name="InputText" type="TextEdit" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_input")
placeholder_text = "Example: Make me a maze game"
wrap_mode = 1

[node name="GenerateButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Generate"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
theme_override_styles/separator = SubResource("StyleBoxFlat_input")

[node name="OutputLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Output:"

[node name="OutputText" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/normal = SubResource("StyleBoxFlat_input")
bbcode_enabled = true
text = "Vector AI is ready to help you create games and code!"

[node name="SettingsDialog" type="Window" parent="."]
title = "Vector AI Settings"
initial_position = 2
size = Vector2i(450, 250)
visible = false
theme = ExtResource("3_theme")
theme_override_constants/title_height = 32

[node name="PanelContainer" type="PanelContainer" parent="SettingsDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dark")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsDialog/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="APIKeyLabel" type="Label" parent="SettingsDialog/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "API Key:"

[node name="APIKeyInput" type="LineEdit" parent="SettingsDialog/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_input")
placeholder_text = "Enter your Gemini API key"
secret = true

[node name="ModelLabel" type="Label" parent="SettingsDialog/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Model:"

[node name="ModelInput" type="LineEdit" parent="SettingsDialog/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_input")
text = "gemini-2.5-flash-preview-04-17"
placeholder_text = "Enter model name"
editable = false

[node name="HSeparator" type="HSeparator" parent="SettingsDialog/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
theme_override_styles/separator = SubResource("StyleBoxFlat_input")

[node name="SaveButton" type="Button" parent="SettingsDialog/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Save Settings"

[connection signal="pressed" from="PanelContainer/VBoxContainer/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HeaderContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="close_requested" from="SettingsDialog" to="." method="_on_settings_dialog_close_requested"]
[connection signal="pressed" from="SettingsDialog/PanelContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
